home/sonarr/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
spec:
  selector:
    app.kubernetes.io/name: sonarr
  ports:
    - port: 8989
      targetPort: sonarr
      name: sonarr
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      containers:
        - name: sonarr
          image: linuxserver/sonarr:4.0.14
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
              protocol: TCP
              name: sonarr
          volumeMounts:
            - mountPath: /tv
              name: jellyfin-video
            - mountPath: /library/anime
              name: media-library
              subPath: anime/shows
            - mountPath: /downloads
              name: qbittorrent-downloads
            - mountPath: /config
              name: sonarr-config
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 750m
              memory: 1Gi
              ephemeral-storage: 256Mi
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-data
        - name: jellyfin-video
          persistentVolumeClaim:
            claimName: jellyfin-media
        - name: media-library
          persistentVolumeClaim:
            claimName: media-library
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-data
