home/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: sonarr.<homelab-domain>
      http:
        paths:
          - path: /
            backend:
              service:
                name: sonarr
                port:
                  name: sonarr
            pathType: Prefix
  tls:
    - hosts:
        - sonarr.<homelab-domain>
      secretName: "sonarr.homelab-cert"
